ref links check
+ Update ref links

--- a/_specs/ecip-1112.md
+++ b/_specs/ecip-1112.md
@@ -267,49 +267,49 @@ Its enforcement of the ECIP-1114 ECFP process ensures all disbursements are tran
 The Olympia Treasury design builds on proven patterns across the EVM ecosystem in which protocol-level revenue — such as EIP-1559 `BASEFEE` or sequencer fees — is routed to on-chain treasuries and allocated through DAO governance.  
 These precedents demonstrate that redirecting endogenous network revenue into transparent, governance-controlled treasuries is an effective, neutral, and sustainable strategy for funding public goods without inflation or centralized gatekeepers.
 
-- **Ronin Network (Axie Infinity sidechain)** — Redirects EIP-1559 `BASEFEE` into a DAO-controlled treasury for infrastructure, grants, and long-term maintenance.  
-  [View Contract](https://explorer.roninchain.com/address/0x22cefc91e9b7c0f3890ebf9527ea89053490694e)
+- **Ronin Network**  
+  Redirects EIP-1559 `BASEFEE` to a DAO-controlled treasury for infrastructure, grants, and validator incentives.  
+  [Ronin Treasury Contract](https://app.roninchain.com/address/0x22cefc91e9b7c0f3890ebf9527ea89053490694e)
 
-- **Celo (Layer 1)** — Uses a Gas Fee Handler to route fees toward climate and community funding via governance-managed treasuries.  
-  [Governance & Fee Handler](https://celoscan.io/address/0xd533ca259b330c7a88f74e000a3faea2d63b7972#code)
+- **Celo (Layer 1)**  
+  Uses a Gas Fee Handler contract to route gas fees toward community funding and climate initiatives, with governance-managed allocation.  
+  [Governance & Fee Handler](https://celoscan.io/address/0xd533ca259b330c7a88f74e000a3faea2d63b7972)
 
-- **Mantle (Layer 2)** — Directs sequencer revenue to a MantleDAO-managed treasury for grants, infrastructure, and developer programs.  
-  [Mantle Fee Mechanism](https://docs.mantle.xyz/network/system-information/fee-mechanism)
+- **Mantle (Layer 2)**  
+  Routes sequencer fees to a MantleDAO-managed treasury, funding grants, developer tooling, and infrastructure.  
+  [Mantle Treasury](https://etherscan.io/address/0x78605Df79524164911C144801f41e9811B7DB73D)
 
-- **Polygon CDK (Modular Rollup Framework)** — Supports sovereign rollups with EIP-1559-compatible treasury hooks and modular DAO governance.  
-  [Polygon CDK Overview](https://docs.polygon.technology/)
+- **Polygon (Layer 2)**  
+  Operates a Community Treasury as a protocol-funded mechanism to support long-term network growth, with governance via the Polygon Funding Proposals repository and DAO-controlled disbursements to ecosystem development, infrastructure, and community initiatives.  
+  [Polygon Community Treasury](https://app.aragon.org/dao/ethereum-mainnet-0x86380e136A3AaD5677A210Ad02713694c4E6a5b9/assets/dashboard?members=tokenvoting&proposals=tokenvoting)
 
-- **OP Stack (Base, Optimism)** — Enables EIP-1559-style transactions and sequencer revenue splitting; establishes DAO governance patterns relevant to treasury design even when `BASEFEE` is not redirected.
+- **OP Stack (Base, Optimism)**  
+  Implements sequencer fee sharing with optional L2 governance control. While `BASEFEE` redirection is not native, the governance structures offer relevant design precedents.
 
-- **Arbitrum (Layer 2)** — Routes sequencer revenue to a DAO-managed treasury; allocations decided via the Arbitrum Improvement Proposal (AIP) process.  
-  [Arbitrum DAO Governance](https://docs.arbitrum.foundation/dao-governance)
+- **Arbitrum**  
+  DAO-governed treasury funded by sequencer revenue; allocations decided through a standardized AIP process.
+  [Arbitrum Treasury](https://arbiscan.io/address/0xF3FC178157fb3c87548bAA86F9d24BA38E649B58)
 
-- **Optimism (Layer 2)** — Uses sequencer revenue to fund Retroactive Public Goods Funding (RPGF) rounds.  
-  [RPGF Overview](https://community.optimism.io/docs/governance/)
+- **Optimism (Retroactive Public Goods Funding)**  
+  Bicameral governance with on-chain treasury allocations for public goods, funded from sequencer revenue.
+  [Optimism Atlas](https://atlas.optimism.io/)
 
-- **zkSync Era & Scroll (Layer 2)** — Integrate sequencer-revenue hooks to support ecosystem growth, infrastructure funding, and developer incentives.
-
-- **Avalanche Subnets** — Some subnets route fees to validator-governed treasuries for ongoing maintenance and network investment.
-
-- **Gitcoin DAO** — Well-known governance/distribution framework for open-source public goods (quadratic funding and direct grants), relevant as a process precedent.  
-  [Gitcoin DAO](https://gitcoin.co/)
-
-> *Informative note*: L2 examples above typically fund treasuries via **sequencer revenue** rather than direct `BASEFEE` capture; they are included as governance and treasury-design precedents relevant to Ethereum Classic’s application-layer governance and distribution model under [ECIP-1113](https://ecips.ethereumclassic.org/ECIPs/ecip-1113) and [ECIP-1114](https://ecips.ethereumclassic.org/ECIPs/ecip-1114).
+> *Note*: L2 examples above typically fund treasuries via **sequencer revenue** rather than direct `BASEFEE` capture; they are included as governance and treasury-design precedents relevant to Ethereum Classic’s application-layer governance and distribution model under [ECIP-1113](https://ecips.ethereumclassic.org/ECIPs/ecip-1113) and [ECIP-1114](https://ecips.ethereumclassic.org/ECIPs/ecip-1114).
 
 #### Addendum: Verified Contract References
 
 For deeper implementation study and validation, the following verified contracts and governance docs illustrate relevant patterns:
 
-- **Ronin Treasury Contract** — [`0x22ce...694e`](https://explorer.roninchain.com/address/0x22cefc91e9b7c0f3890ebf9527ea89053490694e)
-- **Celo Governance / Gas Fee Handler** — [`0x471E...8438`](https://celoscan.io/address/0xd533ca259b330c7a88f74e000a3faea2d63b7972#code)
-- **Mantle Fee Mechanism** — [Docs](https://docs.mantle.xyz/network/system-information/fee-mechanism)
-- **Polygon CDK** — [Docs](https://docs.polygon.technology/)
+- **Ronin Network** — [Ronin Treasury Contract](https://app.roninchain.com/address/0x22cefc91e9b7c0f3890ebf9527ea89053490694e)
+- **Celo** — [Governance & Fee Handler](https://celoscan.io/address/0xd533ca259b330c7a88f74e000a3faea2d63b7972)
+- **Mantle** — [Mantle Treasury](https://etherscan.io/address/0x78605Df79524164911C144801f41e9811B7DB73D)
+- **Polygon** — [Polygon Community Treasury](https://app.aragon.org/dao/ethereum-mainnet-0x86380e136A3AaD5677A210Ad02713694c4E6a5b9/assets/dashboard?members=tokenvoting&proposals=tokenvoting)
 - **OP Stack (Base / Optimism)** — [Governance Docs](https://community.optimism.io/docs/governance/)
-- **Arbitrum DAO** — [DAO Governance](https://docs.arbitrum.foundation/dao-governance)
-- **Optimism RPGF** — [Overview](https://community.optimism.io/docs/governance/)
+- **Arbitrum DAO** — [Arbitrum Treasury](https://arbiscan.io/address/0xF3FC178157fb3c87548bAA86F9d24BA38E649B58)
+- **Optimism RPGF** — [Optimism Atlas](https://atlas.optimism.io/)
 - **Gitcoin DAO** — [Site](https://gitcoin.co/)
-- **Avalanche Subnets** — [Subnet Docs](https://docs.avax.network/subnets)
-- **zkSync Era / Scroll** — [zkSync Docs](https://era.zksync.io/docs/) · [Scroll Docs](https://docs.scroll.io/)
+- **Avalanche Subnets** — [Subnet Docs](https://build.avax.network/docs/avalanche-l1s/when-to-build-avalanche-l1)
+- **zkSync Era / Scroll** — [zkSync Docs](https://docs.zksync.io/zksync-era) · [Scroll Docs](https://docs.scroll.io/)
 
 These references support the neutrality, feasibility, and resilience of protocol-level fee redirection and provide governance models applicable to the Olympia Treasury’s integration with [ECIP-1113](https://ecips.ethereumclassic.org/ECIPs/ecip-1113) and [ECIP-1114](https://ecips.ethereumclassic.org/ECIPs/ecip-1114).
 
