--- a/_specs/ecip-1113.md
+++ b/_specs/ecip-1113.md
@@ -275,28 +275,30 @@ Several production EVM networks redirect endogenous protocol revenue (e.g., `BAS
 
 - **Ronin Network**  
   Redirects EIP-1559 `BASEFEE` to a DAO-controlled treasury for infrastructure, grants, and validator incentives.  
-  [View Contract](https://explorer.roninchain.com/address/0x22cefc91e9b7c0f3890ebf9527ea89053490694e)
+  [Ronin Treasury Contract](https://app.roninchain.com/address/0x22cefc91e9b7c0f3890ebf9527ea89053490694e)
 
 - **Celo (Layer 1)**  
   Uses a Gas Fee Handler contract to route gas fees toward community funding and climate initiatives, with governance-managed allocation.  
-  [Governance & Fee Handler](https://celoscan.io/address/0xd533ca259b330c7a88f74e000a3faea2d63b7972#code)
+  [Governance & Fee Handler](https://celoscan.io/address/0xd533ca259b330c7a88f74e000a3faea2d63b7972)
 
 - **Mantle (Layer 2)**  
   Routes sequencer fees to a MantleDAO-managed treasury, funding grants, developer tooling, and infrastructure.  
-  [Mantle Fee Mechanism](https://docs.mantle.xyz/network/system-information/fee-mechanism)
+  [Mantle Treasury](https://etherscan.io/address/0x78605Df79524164911C144801f41e9811B7DB73D)
 
-- **Polygon CDK**  
-  Enables sovereign rollups to integrate EIP-1559-compatible fee redirection and DAO-controlled treasury hooks.  
-  [Polygon CDK Overview](https://docs.polygon.technology/)
+- **Polygon (Layer 2)**  
+  Operates a Community Treasury as a protocol-funded mechanism to support long-term network growth, with governance via the Polygon Funding Proposals repository and DAO-controlled disbursements to ecosystem development, infrastructure, and community initiatives.  
+  [Polygon Community Treasury](https://app.aragon.org/dao/ethereum-mainnet-0x86380e136A3AaD5677A210Ad02713694c4E6a5b9/assets/dashboard?members=tokenvoting&proposals=tokenvoting)
 
 - **OP Stack (Base, Optimism)**  
   Implements sequencer fee sharing with optional L2 governance control. While `BASEFEE` redirection is not native, the governance structures offer relevant design precedents.
 
 - **Arbitrum**  
   DAO-governed treasury funded by sequencer revenue; allocations decided through a standardized AIP process.
+  [Arbitrum Treasury](https://arbiscan.io/address/0xF3FC178157fb3c87548bAA86F9d24BA38E649B58)
 
 - **Optimism (Retroactive Public Goods Funding)**  
   Bicameral governance with on-chain treasury allocations for public goods, funded from sequencer revenue.
+  [Optimism Atlas](https://atlas.optimism.io/)
 
 > *Note*: L2 examples (Arbitrum, Optimism, Mantle, OP Stack) primarily use sequencer revenue or token allocations rather than `BASEFEE` redirection, but their governance processes informed Olympia DAO’s permissionless and transparent model.
 
@@ -373,7 +375,7 @@ At launch:
 // --- BEGIN VOTING EXAMPLE ---
 // This example uses OpenZeppelin’s GovernorVotes extension pattern.
 // It demonstrates delegated voting and snapshot-based vote retrieval.
-// https://docs.openzeppelin.com/contracts/4.x/governance#governor-votes
+// https://docs.openzeppelin.com/contracts/4.x/governance
 
 function delegate(address delegatee) public {
     _delegate(msg.sender, delegatee);
