--- a/_specs/ecip-1114.md
+++ b/_specs/ecip-1114.md
@@ -415,6 +415,8 @@ The ECFP process places Ethereum Classic on par with DAO-based funding systems u
 - **Celo Community Fund** — Routes a portion of transaction fees to a governance-managed treasury, funding grants and ecosystem initiatives through milestone oversight.
 - **Ronin DAO** — Redirects EIP-1559 `BASEFEE` to a DAO-controlled treasury for infrastructure and ecosystem support, similar to [ECIP-1111](https://ecips.ethereumclassic.org/ECIPs/ecip-1111)’s revenue model.
 - **Mantle Governance** — Manages a modular treasury sourced from rollup sequencer fees, with delegated authority for domain-specific funding.
+- **Polygon Funding Proposals** — Manages a modular treasury sourced from rollup sequencer fees, with delegated authority for domain-specific funding.
+
 
 In each of these systems, treasury funds are controlled by transparent, on-chain governance processes, with immutable execution rules and public accountability. Olympia applies these proven patterns to Ethereum Classic’s Proof-of-Work network — combining:
 - Sustainable, consensus-layer funding from [ECIP-1111](https://ecips.ethereumclassic.org/ECIPs/ecip-1111)
@@ -755,7 +757,10 @@ Its structure draws on proven funding processes from other EVM-compatible networ
 | **MakerDAO**   | **Maker Improvement Proposals (MIPs)**          | 1. Proposal submission → 2. Domain facilitator review → 3. Governance polling → 4. On-chain executive vote → 5. Budget allocation | Highly structured templates and role-based review processes inform ECFP’s standardized proposal format and review periods |
 | **Aave DAO**   | **Aave Governance Proposals (AGPs)**             | 1. Forum discussion → 2. Snapshot signaling vote → 3. On-chain vote → 4. Smart contract execution via Safety Module           | Shows the benefit of soft off-chain signaling before binding votes, similar to optional ECFP “Draft” stage discussions |
 | **Celo**       | **Community Fund Governance Proposals**         | 1. Proposal creation → 2. Stake requirement for submission → 3. On-chain vote → 4. Fund release                               | Reinforces the role of participation thresholds and stake requirements as potential anti-spam measures in ECFP     |
-| **Mantle**     | **Mantle Improvement Proposals (TIPs)**         | 1. TIP drafting → 2. Community discussion → 3. DAO vote → 4. Treasury disbursement                                            | Highlights a direct improvement-proposal-to-treasury flow, similar to ECFP’s hash-bound disbursement model         |
+| **Mantle**     | **Mantle Improvement Proposals (MIPs)**         | 1. MIP drafting → 2. Community discussion → 3. DAO vote → 4. Treasury disbursement                                            | Highlights a direct improvement-proposal-to-treasury flow, similar to ECFP’s hash-bound disbursement model         |
+| **Polygon**    | **Polygon Funding Proposal (PFP) Framework**    | 1. PFP draft in GitHub repo → 2. Community forum discussion → 3. Editor review → 4. Status change via soft consensus → 5. Accepted proposals become `Active` policy with Community Treasury allocations | Uses a transparent, versioned repository and defined proposal statuses to manage in-protocol treasury allocations independent from core dev entities; relevant to ECFP’s archival and process-driven design. |
+
+
 
 #### Observations
 
