ECIP-1112: Minimal Olympia Treasury Contract
Refines ECIP-1112 to a strict, single-purpose specification for the immutable Olympia Treasury contract. Ensures deterministic deployment, governance isolation, and correct integration with ECIP-1111, with updated rationale, security, and compatibility sections.

--- a/_specs/ecip-1111.md
+++ b/_specs/ecip-1111.md
@@ -377,7 +377,7 @@ The Olympia upgrade introduces no new consensus-critical vulnerabilities beyond 
   - `BASEFEE` opcode correctness  
 - **Audit Coordination** — Although ECIP-1111 affects consensus-layer logic only, its interaction with ECIP-1112 SHOULD be reviewed to ensure correct integration of Treasury accumulation mechanisms.
 
-#### Summary
+#### Security Considerations Summary
 
 The Olympia upgrade activates established EVM improvements and introduces a single consensus-layer modification to redirect the `BASEFEE` amount to an immutable Treasury contract. The upgrade is fully additive, preserves all existing EVM semantics, and makes no changes to historical state or previously deployed contracts. With correct implementation, cross-client alignment, and thorough testnet validation, the consensus changes defined in ECIP-1111 can be adopted safely and predictably across the Ethereum Classic network.
 
