Clarify BASEFEE Deposit vs Smoothing Allocation in ECIP-1112/1115
Adds explicit language distinguishing consensus-layer BASEFEE deposits (ECIP-1111/1112) from governance-layer smoothing and allocation (ECIP-1115). Clarifies that 100% of BASEFEE is credited to the Treasury at deposit, and smoothing applies only to Treasury-held funds via the ECIP-1113 pipeline.

--- a/_specs/ecip-1112.md
+++ b/_specs/ecip-1112.md
@@ -81,7 +81,8 @@ This code is illustrative only; client implementations SHALL rely on the publish
 
 Upon activation of ECIP-1111:
 
-- 100% of the `BASEFEE` amount from each EIP-1559 transaction **MUST** be credited to the Treasury address.  
+- The full `BASEFEE` amount from each EIP-1559 transaction **MUST** be credited to the Treasury address at the consensus layer.  
+- This ECIP defines only the deposit requirement. Allocation, smoothing, or redistribution of Treasury-held `BASEFEE` — including mechanisms introduced in governance-layer ECIPs such as ECIP-1114 and ECIP-1115 — operates strictly **after** this deposit and does not modify the consensus rule that 100% of `BASEFEE` is credited to the Treasury.  
 - This transfer **SHALL** occur during block finalization.  
 - Clients that omit, alter, or redirect this behavior **SHALL** fork from the canonical chain.
 
