--- a/_specs/ecip-1115.md
+++ b/_specs/ecip-1115.md
@@ -42,7 +42,10 @@ The mechanism allows BASEFEE-derived miner incentives to be expressed through a 
 
 #### 1. Scope
 
-This ECIP defines an optional governance-layer mechanism for distributing a portion of BASEFEE revenue, accumulated by the Olympia Treasury under ECIP-1111 and ECIP-1112, to miners using a deterministic L-curve smoothing model.  
+This ECIP defines an optional governance-layer mechanism for distributing a portion of BASEFEE revenue, accumulated by the Olympia Treasury under ECIP-1111 and ECIP-1112, to miners using a deterministic L-curve smoothing model. 
+
+It assumes that, as specified in ECIP-1111 and ECIP-1112, **100% of the `BASEFEE` amount for each EIP-1559 transaction continues to be credited to the Treasury at the consensus layer**. All smoothing applies only to Treasury-held funds and cannot alter or bypass this deposit requirement.
+
 This mechanism:
 
 - operates entirely at the application and governance layer,  
@@ -75,13 +78,13 @@ A smoothing module SHALL compute a sequence of scheduled miner allocations based
 - the active smoothing window `N`, and  
 - the active weighting function `L(i)`.
 
-Let `R_k` denote the Treasury’s BASEFEE revenue from block `k`.
+Let `B_k` denote the total `BASEFEE` revenue from block `k` that has been credited to the Treasury under ECIP-1111 and ECIP-1112.
 
-For a given configuration, governance MAY specify a fraction `f` of Treasury-held BASEFEE to be subject to smoothing, such that `R_k` denotes only that fraction (0 ≤ f ≤ 1) of the BASEFEE revenue from block `k`.
+For a given configuration, governance MAY specify a fraction `f` of Treasury-held `BASEFEE` to be subject to smoothing (0 ≤ f ≤ 1). In this ECIP we write `R_k` to denote the smoothed portion `R_k = f · B_k`.
 
 The smoothed allocation for miner-reward index `j` is:
 
-A_{k+j} = R_k × L(j)
+A(k+j) = R_k × L(j)
 
 All allocations MUST be applied only after funds reside in the Treasury and MUST be expressed as standard Treasury disbursements executed through the ECIP-1113 governance pipeline.
 
