Refine ECIP-1115 Motivation to Correctly Frame Priority Fees vs. Optional BASEFEE Split
Clarifies the Motivation section to accurately reflect EIP-1559 fee semantics across Type-0, Type-1, and Type-2 transactions. Priority fees (tips) remain the primary consensus-level miner incentive, while any BASEFEE allocation is an optional, governance-layer complement. Updates language to use canonical terminology (`maxPriorityFeePerGas`) and positions smoothing as an optional stabilization tool for governance-directed BASEFEE allocations. This improves correctness, economic framing, and internal consistency within the Olympia ECIP suite.

--- a/_specs/ecip-1115.md
+++ b/_specs/ecip-1115.md
@@ -23,11 +23,15 @@ Smoothed payouts are authorized solely through the Governor → Timelock → Exe
 
 ### Motivation
 
-As ETC’s fixed-emission schedule gradually reduces block rewards, BASEFEE-derived revenue becomes an increasingly important component of long-term Proof-of-Work security. Because BASEFEE inflows fluctuate with network demand, miners experience high block-to-block revenue variance even when average network activity is stable.
+As Ethereum Classic’s fixed-emission schedule (ECIP-1017) continues to reduce block subsidies over time, priority fees (tips—defined in Type-2 transactions as `maxPriorityFeePerGas` and implicit in `gasPrice` for Type-0 and Type-1) remain the primary consensus-level fee mechanism for miners. These variable priority fees directly reward block producers and continue to anchor Proof-of-Work incentives regardless of how the BASEFEE is handled.
 
-An L-curve smoothing mechanism can reshape the timing of BASEFEE-derived payouts, reducing short-term volatility and improving predictability in miner incentives. Only the temporal distribution changes—the total amount allocated remains the same.
+Under ECIP-1111 and ECIP-1112, 100% of the BASEFEE is redirected to the Olympia Treasury. Any decision to allocate a portion of that Treasury-held BASEFEE back to miners is optional, fully governed through OIPs, and intended to complement—not replace—the priority fee market.
 
-Placing smoothing at the governance layer preserves consensus-layer simplicity, maintains the immutable design of the Olympia Treasury, and allows ETC to adjust curve shapes, window lengths, and allocation policies through the OIP process. This makes smoothing fully optional, empirically tunable, and evolvable without additional hard forks.
+If the Olympia DAO elects to direct a percentage of Treasury-held BASEFEE toward long-term network security, those BASEFEE-derived allocations will inherently fluctuate with network activity. A smoothing mechanism can reshape the timing of these optional allocations, reducing short-term volatility and providing a more predictable payout profile without altering consensus-layer incentives.
+
+Critically, the smoothing framework allows Ethereum Classic to experiment with security-budget policies incrementally and empirically. Rather than setting hard monetary rules (as was done with ECIP-1017) without fee-market data, smoothing keeps BASEFEE-based miner incentives flexible, adjustable, and governance-driven. This design preserves consensus simplicity, avoids premature monetary commitments, and lets the network adapt as Type-2 fee markets mature post-Olympia.
+
+Placing smoothing at the governance layer ensures the mechanism is fully optional, tunable over time, and upgradable without hard forks, while the underlying priority-fee mining incentives remain unchanged at the consensus layer.
 
 ### Specification
 
