Finalize-ish ECIP-1115: Governance-Layer L-Curve Smoothing Framework (Aligned with ECIP-1111–1114) (#544)
* Clarify BASEFEE Deposit vs Smoothing Allocation in ECIP-1112/1115

Adds explicit language distinguishing consensus-layer BASEFEE deposits (ECIP-1111/1112) from governance-layer smoothing and allocation (ECIP-1115). Clarifies that 100% of BASEFEE is credited to the Treasury at deposit, and smoothing applies only to Treasury-held funds via the ECIP-1113 pipeline.

* Math symbol consistency

Math symbols

* Refine ECIP-1115 smoothing spec and rationale

Commit note:

Clarify L-curve smoothing model, allocation rule, and miner distribution modules

Tighten governance-only scope and Treasury isolation; remove client-facing implications

Add rationale, security considerations, and references aligned with Roughgarden ℓ-smoothed design

* Refine ECIP-1115 Motivation to Correctly Frame Priority Fees vs. Optional BASEFEE Split

Clarifies the Motivation section to accurately reflect EIP-1559 fee semantics across Type-0, Type-1, and Type-2 transactions. Priority fees (tips) remain the primary consensus-level miner incentive, while any BASEFEE allocation is an optional, governance-layer complement. Updates language to use canonical terminology (`maxPriorityFeePerGas`) and positions smoothing as an optional stabilization tool for governance-directed BASEFEE allocations. This improves correctness, economic framing, and internal consistency within the Olympia ECIP suite.

* Refine ECIP-1112 consensus-layer funding section and clarify withdrawal scope

Clarifies ECIP-1112 deposit semantics and withdrawal scope; improves separation between consensus-layer rules and governance-layer allocation logic.

--- a/_specs/ecip-1112.md
+++ b/_specs/ecip-1112.md
@@ -81,9 +81,19 @@ This code is illustrative only; client implementations SHALL rely on the publish
 
 Upon activation of ECIP-1111:
 
-- 100% of the `BASEFEE` amount from each EIP-1559 transaction **MUST** be credited to the Treasury address.  
-- This transfer **SHALL** occur during block finalization.  
-- Clients that omit, alter, or redirect this behavior **SHALL** fork from the canonical chain.
+- The full `basefee`-derived amount from each EIP-1559 transaction **MUST** be credited to the Treasury address at the consensus layer.  
+- This transfer **SHALL** occur during block finalization. Clients that omit, alter, or redirect this behavior **SHALL** fork from the canonical chain.
+
+ECIP-1112 defines:
+
+- the immutable Treasury contract,
+- the consensus-layer requirement that 100% of the `basefee`-derived amount be deposited into it, and
+- the single authorized withdrawal entry point.
+
+All allocation, smoothing, or redistribution of Treasury-held BASEFEE — including mechanisms
+defined in ECIP-1114 and ECIP-1115 — occurs strictly **after** deposit and must use the
+governance-controlled execution pathway defined in ECIP-1113. ECIP-1112 itself implements
+no allocation logic or distribution rules.
 
 No additional revenue sources are defined in this ECIP.
 
